<?xml version="1.0"?>
<package format="2">
  <name>pa2</name>
  <version>2.2.3</version>
  <description>
    Programming assingment 2 for COSC169
  </description>

  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>
  <author email="monika.roznere.gr@dartmouth.edu">Monika Roznere</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
